# honeyd

./: .clang-tidy  .gitignore  CLAUDE.md  CMakeLists.txt  README  TODO  analyze.c  analyze.h  arp.c  arp.h  atomicio.c  atomicio.h  command.c  config.c  config.cowrie  config.h.in  config.passthrough  debug.h  dhcpclient.c  dhcpclient.h  ethernet.c  ethernet.h  generate_assoc.py  histogram.c  honeyd.c  honeyd.h  honeyd_overload.c  honeydctl.c  honeydstats.c  honeydstats_main.c  hsniff.c  interface.c  interface.h  ipfrag.c  keycount.c  lex.l  log.c  nmap.assoc  osfp.c  parse.y  (+27 more)
.beads/: issues.jsonl
.github/workflows/: ci.yml  clang-tidy.yml  cppcheck.yml  debian-package.yml  passthrough-test.yml  ruff.yml  smoke-test.yml  static-analysis.yml
cmake/: CheckTypeExists.cmake  FindReadline.cmake  GetGitVersion.cmake
compat/: sha1.h
compat/sys/: queue.h  tree.h
debian/: TODO  changelog  control  copyright  honeyd-common.install  honeyd.doc-base  honeyd.install  honeyd.service  rules
pypcap/: setup.py  test.py  testsniff.py
regress/: detect.py  general.py  nmap.py  regress.py  routing.py
scripts/: run-clang-tidy.sh
scripts/broadcasts/: nbns-wpad-query.py
scripts/lib/: init.py  names.py
scripts/linux/: mysql.py
scripts/linux/mdns/: dns.py  mdns.py
scripts/misc/: smb-autofail.py
scripts/win32/: mssql.py
subsystems/: proxy.c  proxy.h  proxy_main.c  proxy_messages.h  smtp.c  smtp.h  smtp_main.c  smtp_messages.h  test_proxy.py
tests/passthrough/: Dockerfile  test_passthrough.sh
tests/smoke/: Dockerfile  smoke_test.sh  test.conf
webserver/: htmltmpl.py  precompile_templates.py  server.py  support.py
webserver/htdocs/: config.py  index.py
